--- a/style.scss
+++ b/style.scss
@@ -109,3 +109,77 @@ nav {
         }
     }
 }
+
+// Footer Section
+footer{
+    height: 200px;
+    background: $primary;
+    border-top: 2px solid $lime;
+    padding: 47px 114px 0 114px;
+
+
+    
+    .social_link{
+        display: flex;
+        justify-content: center;
+
+        .sm_container{
+            width: 34px;
+            height: 34px;
+            border-radius: 3px;
+            background: $lime;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 13px;
+
+            img{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+
+    .nav_links{
+        display: flex;
+        justify-content: center;
+        padding: 34px 0 0;
+
+        ul{
+            list-style: none;
+            display: flex;
+            
+            li{
+                a{
+                    text-decoration: none;
+                    color: $text;
+                    width: 62px;
+                    height: 20px;
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 20px;
+                    letter-spacing: 0.01em;
+                    margin: 0 15px;
+                }
+            }
+        }
+    }
+
+    .copyright{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 20px;
+        color: $text;
+        text-align: center;
+        padding: 34px 0;
+
+        span{
+            color: $lime;
+        }
+    }
+}
