--- a/style.scss
+++ b/style.scss
@@ -12,11 +12,15 @@ $lime: #65F3AC;
 $grey: #E2E2E2;
 $text:#A2A4A3;
 $primary: #25262A;
+$secondary: #2D2F33;
 
 nav {
     display: flex;
     justify-content: space-between;
+    width: 100%;
     align-items: center;
+    position: fixed;
+    top: 0;
     padding: 20px 114px;
     background: $primary;
     border-bottom: 3px solid $lime;
@@ -110,15 +114,42 @@ nav {
     }
 }
 
+// Contact us Section
+.contact_us{
+    height: 851px;
+    background: $secondary;
+    padding: 48px 114px 0;
+
+    .contact_heading{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 35px;
+        line-height: 20px;
+        letter-spacing: 0.01em;
+        color: $grey;
+        text-align: center;
+    }
+    .underline{
+        width: 75px;
+        height: 5px;
+        background-color: $lime;
+        border-radius: 12px;
+        margin: 17px 0 74px;
+    }
+
+    form{
+        text-align: center;
+    }
+}
+
 // Footer Section
 footer{
     height: 200px;
+    width: 100%;
     background: $primary;
-    border-top: 2px solid $lime;
-    padding: 47px 114px 0 114px;
+    padding: 47px 114px 0;
 
-
-    
     .social_link{
         display: flex;
         justify-content: center;
@@ -176,7 +207,7 @@ footer{
         line-height: 20px;
         color: $text;
         text-align: center;
-        padding: 34px 0;
+        padding: 34px 0 0;
 
         span{
             color: $lime;
