--- a/style.css
+++ b/style.css
@@ -58,14 +58,24 @@ nav ul li a {
 
 .banner {
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
+  position: relative;
   font-family: "Montserrat";
   background: #25262A;
 }
-.banner .content {
+.banner .grid-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  position: absolute;
+  display: grid;
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  grid-template-columns: 50% 50%;
+}
+.banner .grid-container .content {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
@@ -73,21 +83,78 @@ nav ul li a {
   gap: 20px;
   padding-left: 114px;
 }
-.banner .content .banner-title {
+.banner .grid-container .content .banner-title {
   font-weight: 700;
   font-size: 40px;
   line-height: 65px;
 }
-.banner .content .banner-title h2 {
+.banner .grid-container .content .banner-title h2 {
   color: #E2E2E2;
 }
-.banner .content .banner-title h1 {
+.banner .grid-container .content .banner-title h1 {
   color: #65F3AC;
 }
-.banner .content p {
+.banner .grid-container .content p {
   width: 70%;
   font-weight: 500;
   font-size: 18px;
   line-height: 35px;
   color: #A2A4A3;
+}
+
+.scroll {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+}
+.scroll a#scroll-btn {
+  width: 22px;
+  height: 44px;
+  border: 1px solid #51555E;
+  background: #51555E;
+  margin: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 2.25em;
+  text-align: center;
+  border-radius: 3em;
+}
+.scroll a#scroll-btn:before {
+  position: absolute;
+  content: "";
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 1.25em;
+  height: 1.2em;
+  width: 1.2em;
+  background-color: #65F3AC;
+  border-radius: 50%;
+  -webkit-animation: move-down 2s infinite;
+          animation: move-down 2s infinite;
+}
+@-webkit-keyframes move-down {
+  80% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(1.3em);
+    opacity: 0;
+  }
+}
+@keyframes move-down {
+  80% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(1.3em);
+    opacity: 0;
+  }
+}
+
+@media (min-width: 600px) {
+  .grid-container .banner-image {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
