--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -12,13 +11,14 @@ nav {
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
+  z-index: 10;
   padding: 20px 114px;
   background: #25262A;
   border-bottom: 3px solid #65F3AC;
 }
-
 nav .logo {
   font-family: "Montserrat";
   font-style: normal;
@@ -26,28 +26,23 @@ nav .logo {
   font-size: 21px;
   color: #FFFFFF;
 }
-
 nav .logo span {
   color: #65F3AC;
 }
-
 nav ul {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 500px;
 }
-
 nav ul li {
   list-style: none;
   display: inline-block;
 }
-
 nav ul li #active {
   color: #65F3AC;
   border-bottom: 3px solid #65F3AC;
 }
-
 nav ul li a {
   color: #FFFFFF;
   text-decoration: none;
@@ -69,10 +64,10 @@ nav ul li a {
 .banner {
   height: 100vh;
   position: relative;
+  z-index: 1;
   font-family: "Montserrat";
   background: #25262A;
 }
-
 .banner .grid-container {
   position: absolute;
   top: 50%;
@@ -86,7 +81,6 @@ nav ul li a {
   max-height: max-content;
   grid-template-columns: 50% 50%;
 }
-
 .banner .grid-container .content {
   display: flex;
   justify-content: space-evenly;
@@ -95,21 +89,17 @@ nav ul li a {
   gap: 20px;
   padding-left: 114px;
 }
-
 .banner .grid-container .content .banner-title {
   font-weight: 700;
   font-size: 40px;
   line-height: 65px;
 }
-
 .banner .grid-container .content .banner-title h2 {
   color: #E2E2E2;
 }
-
 .banner .grid-container .content .banner-title h1 {
   color: #65F3AC;
 }
-
 .banner .grid-container .content p {
   width: 70%;
   font-weight: 500;
@@ -123,7 +113,6 @@ nav ul li a {
   bottom: 5px;
   left: 50%;
 }
-
 .scroll a#scroll-btn {
   width: 22px;
   height: 44px;
@@ -137,7 +126,6 @@ nav ul li a {
   text-align: center;
   border-radius: 3em;
 }
-
 .scroll a#scroll-btn:before {
   position: absolute;
   content: "";
@@ -150,25 +138,21 @@ nav ul li a {
   background-color: #65F3AC;
   border-radius: 50%;
   -webkit-animation: move-down 2s infinite;
-  animation: move-down 2s infinite;
+          animation: move-down 2s infinite;
 }
-
 @-webkit-keyframes move-down {
   80% {
     opacity: 0.5;
   }
-
   100% {
     transform: translateY(1.3em);
     opacity: 0;
   }
 }
-
 @keyframes move-down {
   80% {
     opacity: 0.5;
   }
-
   100% {
     transform: translateY(1.3em);
     opacity: 0;
@@ -180,13 +164,11 @@ nav ul li a {
     display: none;
   }
 }
-
 .contact_us {
   height: 851px;
   background: #2D2F33;
   padding: 48px 114px 0;
 }
-
 .contact_us .contact_heading {
   font-family: "Montserrat";
   font-style: normal;
@@ -197,7 +179,6 @@ nav ul li a {
   color: #E2E2E2;
   text-align: center;
 }
-
 .contact_us .underline {
   width: 75px;
   height: 5px;
@@ -205,7 +186,6 @@ nav ul li a {
   border-radius: 12px;
   margin: 17px 0 74px;
 }
-
 .contact_us form {
   text-align: center;
 }
@@ -216,12 +196,10 @@ footer {
   background: #25262A;
   padding: 47px 114px 0;
 }
-
 footer .social_link {
   display: flex;
   justify-content: center;
 }
-
 footer .social_link .sm_container {
   width: 34px;
   height: 34px;
@@ -232,24 +210,20 @@ footer .social_link .sm_container {
   align-items: center;
   margin: 0 13px;
 }
-
 footer .social_link .sm_container img {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 footer .nav_links {
   display: flex;
   justify-content: center;
   padding: 34px 0 0;
 }
-
 footer .nav_links ul {
   list-style: none;
   display: flex;
 }
-
 footer .nav_links ul li a {
   text-decoration: none;
   color: #A2A4A3;
@@ -263,7 +237,6 @@ footer .nav_links ul li a {
   letter-spacing: 0.01em;
   margin: 0 15px;
 }
-
 footer .copyright {
   font-family: "Montserrat";
   font-style: normal;
@@ -274,9 +247,93 @@ footer .copyright {
   text-align: center;
   padding: 34px 0 0;
 }
-
 footer .copyright span {
   color: #65F3AC;
 }
 
-/*# sourceMappingURL=style.css.map */
+.contact_us {
+  height: 851px;
+  background: #2D2F33;
+  padding: 48px 114px 0;
+}
+.contact_us .contact_heading {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  color: #E2E2E2;
+  text-align: center;
+}
+.contact_us .underline {
+  width: 75px;
+  height: 5px;
+  background-color: #65F3AC;
+  border-radius: 12px;
+  margin: 17px 0 74px;
+}
+.contact_us form {
+  text-align: center;
+}
+
+footer {
+  height: 200px;
+  width: 100%;
+  background: #25262A;
+  padding: 47px 114px 0;
+}
+footer .social_link {
+  display: flex;
+  justify-content: center;
+}
+footer .social_link .sm_container {
+  width: 34px;
+  height: 34px;
+  border-radius: 3px;
+  background: #65F3AC;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 13px;
+}
+footer .social_link .sm_container img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .nav_links {
+  display: flex;
+  justify-content: center;
+  padding: 34px 0 0;
+}
+footer .nav_links ul {
+  list-style: none;
+  display: flex;
+}
+footer .nav_links ul li a {
+  text-decoration: none;
+  color: #A2A4A3;
+  width: 62px;
+  height: 20px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  margin: 0 15px;
+}
+footer .copyright {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  color: #A2A4A3;
+  text-align: center;
+  padding: 34px 0 0;
+}
+footer .copyright span {
+  color: #65F3AC;
+}/*# sourceMappingURL=style.css.map */
