scroll animation fine tune

--- a/style.css
+++ b/style.css
@@ -130,13 +130,13 @@ nav ul li a {
   position: absolute;
   content: "";
   margin: auto;
-  left: 0;
-  right: 0;
+  left: 0px;
+  right: 4.5px;
   bottom: 1.25em;
   height: 1.2em;
   width: 1.2em;
   background-color: #65F3AC;
-  border-radius: 50%;
+  border-radius: 100%;
   -webkit-animation: move-down 2s infinite;
           animation: move-down 2s infinite;
 }
