--- a/style.css
+++ b/style.css
@@ -165,36 +165,92 @@ nav ul li a {
   }
 }
 .contact_us {
-  height: 851px;
+  height: 845px;
   background: #2D2F33;
-  padding: 48px 114px 0;
+  padding: 30px 39px 0;
 }
 .contact_us .contact_heading {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  font-size: 35px;
+  font-size: 20px;
   line-height: 20px;
   letter-spacing: 0.01em;
   color: #E2E2E2;
   text-align: center;
 }
 .contact_us .underline {
-  width: 75px;
+  width: 40px;
   height: 5px;
   background-color: #65F3AC;
   border-radius: 12px;
-  margin: 17px 0 74px;
+  margin: 11px auto 42px;
 }
 .contact_us form {
   text-align: center;
 }
+.contact_us form .form_box {
+  width: 364px;
+  height: 117px;
+  background: #2D2F33;
+  box-shadow: 5px 5px 25px rgba(101, 243, 172, 0.04);
+  border-radius: 9px;
+  margin: 0 auto 42px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact_us form .form_box label {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0.05em;
+  color: #EAEAEA;
+  text-align: left;
+  margin-top: 10px;
+  margin-left: 28px;
+}
+.contact_us form .form_box .input {
+  width: 310px;
+  height: 47px;
+  background: #2F3335;
+  border: none;
+  border-radius: 9px;
+  margin-left: 28px;
+  margin-bottom: 29px;
+  resize: none;
+  padding: 8px 8px;
+  color: #EAEAEA;
+}
+.contact_us form .form_box .input:focus {
+  outline: none;
+  border: 1px solid #65F3AC;
+}
+.contact_us form .submit {
+  width: 240px;
+  height: 49px;
+  background: #65F3AC;
+  border-radius: 4px;
+}
+.contact_us form .submit span {
+  width: 156px;
+  height: 20px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  color: #000000;
+}
 
 footer {
-  height: 200px;
+  height: 217px;
   width: 100%;
   background: #25262A;
-  padding: 47px 114px 0;
+  padding: 0 28px;
 }
 footer .social_link {
   display: flex;
@@ -208,7 +264,7 @@ footer .social_link .sm_container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 13px;
+  margin: 39px 26px 13px;
 }
 footer .social_link .sm_container img {
   display: flex;
@@ -232,103 +288,16 @@ footer .nav_links ul li a {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 20px;
   letter-spacing: 0.01em;
-  margin: 0 15px;
+  margin: 13px 15px;
 }
 footer .copyright {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  color: #A2A4A3;
-  text-align: center;
-  padding: 34px 0 0;
-}
-footer .copyright span {
-  color: #65F3AC;
-}
-
-.contact_us {
-  height: 851px;
-  background: #2D2F33;
-  padding: 48px 114px 0;
-}
-.contact_us .contact_heading {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 35px;
-  line-height: 20px;
-  letter-spacing: 0.01em;
-  color: #E2E2E2;
-  text-align: center;
-}
-.contact_us .underline {
-  width: 75px;
-  height: 5px;
-  background-color: #65F3AC;
-  border-radius: 12px;
-  margin: 17px 0 74px;
-}
-.contact_us form {
-  text-align: center;
-}
-
-footer {
-  height: 200px;
-  width: 100%;
-  background: #25262A;
-  padding: 47px 114px 0;
-}
-footer .social_link {
-  display: flex;
-  justify-content: center;
-}
-footer .social_link .sm_container {
-  width: 34px;
-  height: 34px;
-  border-radius: 3px;
-  background: #65F3AC;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 13px;
-}
-footer .social_link .sm_container img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer .nav_links {
-  display: flex;
-  justify-content: center;
-  padding: 34px 0 0;
-}
-footer .nav_links ul {
-  list-style: none;
-  display: flex;
-}
-footer .nav_links ul li a {
-  text-decoration: none;
-  color: #A2A4A3;
-  width: 62px;
-  height: 20px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  letter-spacing: 0.01em;
-  margin: 0 15px;
-}
-footer .copyright {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 20px;
   color: #A2A4A3;
   text-align: center;
