--- a/style.css
+++ b/style.css
@@ -6,52 +6,6 @@
   box-sizing: border-box;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  padding: 20px 114px;
-  background: #25262A;
-  border-bottom: 3px solid #65F3AC;
-}
-nav .logo {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 21px;
-  color: #FFFFFF;
-}
-nav .logo span {
-  color: #65F3AC;
-}
-nav ul {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 500px;
-}
-nav ul li {
-  list-style: none;
-  display: inline-block;
-}
-nav ul li #active {
-  color: #65F3AC;
-  border-bottom: 3px solid #65F3AC;
-}
-nav ul li a {
-  color: #FFFFFF;
-  text-decoration: none;
-  font-family: "Red Hat Display";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-}
-
 .btn {
   background: #65F3AC;
   border: none;
@@ -59,63 +13,70 @@ nav ul li a {
   font-size: 16px;
   font-family: "Montserrat";
   font-weight: 600;
+  border-radius: 3px;
+}
+.btn:hover {
+  cursor: pointer;
 }
 
 .banner {
-  height: 100vh;
   position: relative;
-  z-index: 1;
-  font-family: "Montserrat";
-  background: #25262A;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px;
+  background-color: #25262A;
 }
 .banner .grid-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  z-index: 2;
   width: 100%;
-  position: absolute;
   display: grid;
-  max-height: -webkit-max-content;
-  max-height: -moz-max-content;
-  max-height: max-content;
-  grid-template-columns: 50% 50%;
 }
 .banner .grid-container .content {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-  gap: 20px;
-  padding-left: 114px;
+  gap: 30px;
+  width: 100%;
 }
-.banner .grid-container .content .banner-title {
+.banner .grid-container .content h2 {
+  font-family: "Montserrat";
+  font-style: normal;
   font-weight: 700;
-  font-size: 40px;
-  line-height: 65px;
-}
-.banner .grid-container .content .banner-title h2 {
+  font-size: 25px;
   color: #E2E2E2;
 }
-.banner .grid-container .content .banner-title h1 {
+.banner .grid-container .content h1 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
   color: #65F3AC;
 }
 .banner .grid-container .content p {
-  width: 70%;
+  font-family: "Montserrat";
+  font-style: normal;
   font-weight: 500;
-  font-size: 18px;
-  line-height: 35px;
+  font-size: 13px;
   color: #A2A4A3;
+  width: 100%;
+}
+.banner .grid-container .banner-image {
+  display: none;
 }
 
 .scroll {
   position: absolute;
   bottom: 5px;
   left: 50%;
+  right: 50%;
 }
 .scroll a#scroll-btn {
-  width: 22px;
-  height: 44px;
+  width: 15px;
+  height: 30px;
   border: 1px solid #51555E;
   background: #51555E;
   margin: auto;
@@ -131,12 +92,11 @@ nav ul li a {
   content: "";
   margin: auto;
   left: 0px;
-  right: 4.5px;
   bottom: 1.25em;
-  height: 1.2em;
-  width: 1.2em;
+  height: 10px;
+  width: 100%;
   background-color: #65F3AC;
-  border-radius: 100%;
+  border-radius: 50%;
   -webkit-animation: move-down 2s infinite;
           animation: move-down 2s infinite;
 }
@@ -159,181 +119,60 @@ nav ul li a {
   }
 }
 
-@media (min-width: 600px) {
-  .grid-container .banner-image {
-    display: none;
+#bgtext1, #bgtext2 {
+  display: none;
+}
+
+@media only screen and (min-width: 600px) {
+  .banner {
+    height: 100vh;
+    padding: 0 114px;
   }
-}
-.contact_us {
-  height: 851px;
-  background: #2D2F33;
-  padding: 48px 114px 0;
-}
-.contact_us .contact_heading {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 35px;
-  line-height: 20px;
-  letter-spacing: 0.01em;
-  color: #E2E2E2;
-  text-align: center;
-}
-.contact_us .underline {
-  width: 75px;
-  height: 5px;
-  background-color: #65F3AC;
-  border-radius: 12px;
-  margin: 17px 0 74px;
-}
-.contact_us form {
-  text-align: center;
-}
-
-footer {
-  height: 200px;
-  width: 100%;
-  background: #25262A;
-  padding: 47px 114px 0;
-}
-footer .social_link {
-  display: flex;
-  justify-content: center;
-}
-footer .social_link .sm_container {
-  width: 34px;
-  height: 34px;
-  border-radius: 3px;
-  background: #65F3AC;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 13px;
-}
-footer .social_link .sm_container img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer .nav_links {
-  display: flex;
-  justify-content: center;
-  padding: 34px 0 0;
-}
-footer .nav_links ul {
-  list-style: none;
-  display: flex;
-}
-footer .nav_links ul li a {
-  text-decoration: none;
-  color: #A2A4A3;
-  width: 62px;
-  height: 20px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  letter-spacing: 0.01em;
-  margin: 0 15px;
-}
-footer .copyright {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  color: #A2A4A3;
-  text-align: center;
-  padding: 34px 0 0;
-}
-footer .copyright span {
-  color: #65F3AC;
-}
-
-.contact_us {
-  height: 851px;
-  background: #2D2F33;
-  padding: 48px 114px 0;
-}
-.contact_us .contact_heading {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 35px;
-  line-height: 20px;
-  letter-spacing: 0.01em;
-  color: #E2E2E2;
-  text-align: center;
-}
-.contact_us .underline {
-  width: 75px;
-  height: 5px;
-  background-color: #65F3AC;
-  border-radius: 12px;
-  margin: 17px 0 74px;
-}
-.contact_us form {
-  text-align: center;
-}
-
-footer {
-  height: 200px;
-  width: 100%;
-  background: #25262A;
-  padding: 47px 114px 0;
-}
-footer .social_link {
-  display: flex;
-  justify-content: center;
-}
-footer .social_link .sm_container {
-  width: 34px;
-  height: 34px;
-  border-radius: 3px;
-  background: #65F3AC;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 13px;
-}
-footer .social_link .sm_container img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer .nav_links {
-  display: flex;
-  justify-content: center;
-  padding: 34px 0 0;
-}
-footer .nav_links ul {
-  list-style: none;
-  display: flex;
-}
-footer .nav_links ul li a {
-  text-decoration: none;
-  color: #A2A4A3;
-  width: 62px;
-  height: 20px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  letter-spacing: 0.01em;
-  margin: 0 15px;
-}
-footer .copyright {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  color: #A2A4A3;
-  text-align: center;
-  padding: 34px 0 0;
-}
-footer .copyright span {
-  color: #65F3AC;
+  .banner a#scroll-btn {
+    width: 22px;
+    height: 44px;
+    left: 0;
+    right: 0;
+    bottom: 2.25em;
+  }
+  .banner a#scroll-btn:before {
+    left: 0px;
+    bottom: 1.25em;
+    height: 20px;
+    width: 100%;
+  }
+  .banner .content h2,
+.banner .content h1 {
+    font-size: 40px !important;
+  }
+  .banner .content p {
+    font-size: 18px !important;
+  }
+  .grid-container {
+    grid-template-columns: 40% 60%;
+  }
+  #bgtext1 {
+    display: block;
+    position: absolute;
+    left: 114px;
+    top: 150px;
+    z-index: 1;
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 165px;
+    opacity: 0.02;
+    color: #65F3AC;
+  }
+  #bgtext2 {
+    display: block;
+    position: absolute;
+    right: 300px;
+    top: 330px;
+    z-index: 1;
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 165px;
+    opacity: 0.02;
+    color: #65F3AC;
+  }
 }/*# sourceMappingURL=style.css.map */
