--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ nav ul li a {
   height: 49px;
   background: #65F3AC;
   border-radius: 4px;
+  border: none;
 }
 .contact_us form .submit span {
   width: 156px;
@@ -244,6 +245,9 @@ nav ul li a {
   line-height: 20px;
   letter-spacing: 0.01em;
   color: #000000;
+}
+.contact_us form .submit img {
+  margin-left: 8px;
 }
 
 footer {
