--- a/style.scss
+++ b/style.scss
@@ -263,6 +263,7 @@ nav {
             height: 49px;
             background: #65F3AC;
             border-radius: 4px;
+            border: none;
 
             span{
                 width: 156px;
@@ -274,6 +275,10 @@ nav {
                 line-height: 20px;
                 letter-spacing: 0.01em;
                 color: #000000;
+            }
+
+            img{
+                margin-left: 8px;
             }
         }
     }
