--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
 }
 .scroll a#scroll-btn {
   width: 15px;
-  height: 30px;
+  height: 35px;
   border: 1px solid #51555E;
   background: #51555E;
   margin: auto;
@@ -84,6 +84,9 @@
   left: 0;
   right: 0;
   bottom: 2.25em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   border-radius: 3em;
 }
@@ -91,9 +94,8 @@
   position: absolute;
   content: "";
   margin: auto;
-  left: 0px;
-  bottom: 1.25em;
-  height: 10px;
+  bottom: 1.3em;
+  height: 13px;
   width: 100%;
   background-color: #65F3AC;
   border-radius: 50%;
@@ -119,7 +121,8 @@
   }
 }
 
-#bgtext1, #bgtext2 {
+#bgtext1,
+#bgtext2 {
   display: none;
 }
 
@@ -134,12 +137,13 @@
     left: 0;
     right: 0;
     bottom: 2.25em;
+    display: flex;
+    justify-content: center;
   }
   .banner a#scroll-btn:before {
-    left: 0px;
     bottom: 1.25em;
     height: 20px;
-    width: 100%;
+    width: 21px;
   }
   .banner .content h2,
 .banner .content h1 {
