--- a/style.css
+++ b/style.css
@@ -179,4 +179,53 @@
     opacity: 0.02;
     color: #65F3AC;
   }
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Montserrat !important;
+}
+
+.navbar {
+  background-color: #25262A !important;
+  border-bottom: 3px solid #65F3AC;
+}
+
+.navbar .navbar-nav .nav-link {
+  color: #FFF !important;
+}
+
+.navbar .navbar-brand {
+  color: #FFF !important;
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-left: 7%;
+}
+
+.navbar .navbar-brand::first-letter {
+  color: #65F3AC !important;
+}
+
+.navbar .navbar-nav .nav-link.active {
+  color: #65F3AC !important;
+  border-bottom: 3px solid #65F3AC;
+}
+
+.navbar .navbar-nav .nav-link {
+  margin-right: 1.6rem !important;
+}
+
+.navbar .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' standalone='no'%3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 20010904//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'%3E%3Csvg version='1.0' xmlns='http://www.w3.org/2000/svg' width='257.000000pt' height='238.000000pt' viewBox='0 0 257.000000 238.000000' preserveAspectRatio='xMidYMid meet'%3E%3Cg transform='translate(0.000000,238.000000) scale(0.100000,-0.100000)'%0Afill='%2365F3AC' stroke='none'%3E%3Cpath d='M398 2091 c-122 -24 -148 -198 -41 -268 26 -17 78 -18 978 -18 l950%0A0 33 23 c85 61 83 192 -5 249 -26 17 -79 18 -953 19 -509 1 -942 -1 -962 -5z'/%3E%3Cpath d='M370 1328 c-102 -52 -107 -196 -10 -253 34 -20 50 -20 680 -20 606 0%0A648 1 673 18 89 58 89 196 0 254 -25 17 -70 18 -663 21 l-635 2 -45 -22z'/%3E%3Cpath d='M704 590 c-324 -5 -343 -6 -364 -25 -78 -71 -62 -201 30 -247 31 -15%0A75 -17 365 -18 368 0 377 1 422 69 56 83 7 208 -87 222 -14 2 -179 2 -366 -1z'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+.navbar .navbar-toggler-icon:focus {
+  background-color: red !important;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar .navbar-nav .nav-link {
+    margin-left: 2em !important;
+  }
 }/*# sourceMappingURL=style.css.map */
