--- a/style.css
+++ b/style.css
@@ -7,17 +7,17 @@
           box-sizing: border-box;
 }
 
-.btn {
+.button {
   background: #65F3AC;
   border: none;
   padding: 15px 60px 15px 30px;
   font-size: 16px;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat' !important;
   font-weight: 600;
   border-radius: 3px;
 }
 
-.btn:hover {
+.button:hover {
   cursor: pointer;
 }
 
