--- a/style.scss
+++ b/style.scss
@@ -15,12 +15,12 @@ $primary: #25262A;
 $secondary: #2D2F33;
 
 // Hero Section
-.btn {
+.button {
     background: $lime;
     border: none;
     padding: 15px 60px 15px 30px;
     font-size: 16px;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat' !important;
     font-weight: 600;
     border-radius: 3px;
 
